--- a/style2.css
+++ b/style2.css
@@ -115,12 +115,12 @@ p {
 }
 
 .bg1 {
-  background: url('../img/main-11.jpeg');
+  background: url('main-11.jpeg');
   color: aqua;
 }
 
 .bg2 {
-  background: url('../img/main-22.jpeg');
+  background: url('main-22.jpeg');
   color: #9cf207;
 }
 /* For devices with width less than 1200px (large desktops/laptops) */
